# TMT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  raw_data.csv  requirements.txt  thread_test.py  tmt.py  update.txt
.github/workflows/: c-cpp.yml
example/: run_cnn_inference.py  thread_test.py
include/bpf/: common.h
include/user/common/: common.hpp
include/user/handlers/: BaseHandler.hpp  Clone3Handler.hpp  CloneHandler.hpp  ExecveHandler.hpp  ExitHandler.hpp  ForkHandler.hpp  SwitchHandler.hpp
include/user/logger/: SyscallLogger.hpp
include/user/processors/: EventProcessor.hpp  SwitchProcessor.hpp
mac-test-vm/: README.md  ubuntu-vm.yml
old/processor/: Processor.py  SwitchProcessor.py
old/syscall_logger/handlers/: clone.py  clone3.py  execve.py  exitgroup.py  switch.py
old/syscall_logger/handlers/bpf/: clone.c  exit.c  fork.c
old/syscall_logger/handlers/utils/: basehandler.py  pids.py
outputs/: ferret_threads_farm_medium.out
plots/: cpu_timeline.gp  rq_depth_all_cpus.gp  rq_depth_all_cpus_stack.gp  threads_over_time.gp
src/bpf/: clone.bpf.c  clone3.bpf.c  execve.bpf.c  exit.bpf.c  exit_group.bpf.c  fork.bpf.c  maps.h  sched_switch.bpf.c
src/bpf/include/: vmlinux.h
src/user/: EventProcessor.cpp  EventProcessor.hpp  SwitchProcessor.cpp  SwitchProcessor.hpp  SyscallLogger.cpp  SyscallLogger.hpp  main.cpp
src/user/handlers/: BaseHandler.cpp  BaseHandler.hpp  Clone3Handler.cpp  CloneHandler.cpp  ExecveHandler.cpp  ExitGroupHandler.cpp  ExitGroupHandler.hpp  ExitHandler.cpp  ForkHandler.cpp  SwitchHandler.cpp  SwitchHandler.hpp
src/user/include/: common.hpp
src/user/logger/: SyscallLogger.cpp
src/user/processors/: EventProcessor.cpp  SwitchProcessor.cpp
syscall_logger/: logger.py
syscall_logger/handlers/: clone.py  clone3.py  execve.py  exit.py  exitgroup.py  fork.py
syscall_logger/handlers/bpf/: clone.c  clone3.c  execve.c  exit.c  exitgroup.c  fork.c  switch.c
syscall_logger/handlers/bpf/TEMPLATE/: common_maps  data  fillfromtask  include
syscall_logger/handlers/utils/: basehandler.py
utils/: logger.py
